# frontend/openapi.json
@@ -697,6 +697,25 @@
       }
     },
     "/api/me" : {
+      "delete" : {
+        "operationId" : "deleteMe",
+        "responses" : {
+          "204" : {
+            "description" : "No Content"
+          },
+          "401" : {
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/ErrorResponse"
+                }
+              }
+            },
+            "description" : "Unauthorized"
+          }
+        },
+        "tags" : [ "auth-controller" ]
+      },
       "get" : {
         "operationId" : "me",
         "responses" : {
